create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8922,3 +8922,757 @@ a {
     left: -1rem;
   }
 }
+.cid-scEjLS1YEC {
+  background-image: url("../../../assets/images/geometric-1732847-1920-1920x960.jpg");
+}
+@media (max-width: 991px) {
+  .cid-scEjLS1YEC .mbr-section-title,
+  .cid-scEjLS1YEC .mbr-section-subtitle,
+  .cid-scEjLS1YEC .mbr-section-btn,
+  .cid-scEjLS1YEC .mbr-text {
+    text-align: center;
+  }
+}
+.cid-scEjLS1YEC .mbr-section-title {
+  color: #ffffff;
+}
+.cid-scEjLS1YEC .mbr-text,
+.cid-scEjLS1YEC .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-scEiXIMDo6 {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #4479d9;
+}
+.cid-scEk8ISnYN {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffe161;
+}
+.cid-scEk8ISnYN img,
+.cid-scEk8ISnYN .item-img {
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-scEk8ISnYN .item:focus,
+.cid-scEk8ISnYN span:focus {
+  outline: none;
+}
+.cid-scEk8ISnYN .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-scEk8ISnYN .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fff0b0;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-scEk8ISnYN .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-scEk8ISnYN .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-scEk8ISnYN .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-scEk8ISnYN .mbr-section-title {
+  color: #232323;
+}
+.cid-scEk8ISnYN .mbr-text,
+.cid-scEk8ISnYN .mbr-section-btn {
+  text-align: center;
+}
+.cid-scEk8ISnYN .item-title {
+  text-align: center;
+}
+.cid-scEk8ISnYN .item-subtitle {
+  text-align: center;
+  color: #232323;
+}
+.cid-scEmHvfWof {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #fff0b0;
+}
+.cid-scEmHvfWof img,
+.cid-scEmHvfWof .item-img {
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-scEmHvfWof .item:focus,
+.cid-scEmHvfWof span:focus {
+  outline: none;
+}
+.cid-scEmHvfWof .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-scEmHvfWof .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #ffe161;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-scEmHvfWof .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-scEmHvfWof .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-scEmHvfWof .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-scEmHvfWof .mbr-section-title {
+  color: #232323;
+}
+.cid-scEmHvfWof .mbr-text,
+.cid-scEmHvfWof .mbr-section-btn {
+  text-align: center;
+}
+.cid-scEmHvfWof .item-title {
+  text-align: center;
+}
+.cid-scEmHvfWof .item-subtitle {
+  text-align: center;
+  color: #232323;
+}
+.cid-scEsE1ANkO {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #ffe161;
+}
+@media (max-width: 991px) {
+  .cid-scEsE1ANkO .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-scEsE1ANkO img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-scEsE1ANkO .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-scEuiM8xQ8 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #fff0b0;
+}
+.cid-scEuiM8xQ8 .item:focus,
+.cid-scEuiM8xQ8 span:focus {
+  outline: none;
+}
+.cid-scEuiM8xQ8 .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-scEuiM8xQ8 .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #ffe161;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-scEuiM8xQ8 .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-scEuiM8xQ8 .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-scEuiM8xQ8 .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-scEuiM8xQ8 .mbr-section-title {
+  color: #232323;
+}
+.cid-scEuiM8xQ8 .mbr-text,
+.cid-scEuiM8xQ8 .mbr-section-btn {
+  text-align: center;
+}
+.cid-scEuiM8xQ8 .item-title {
+  text-align: center;
+}
+.cid-scEuiM8xQ8 .item-subtitle {
+  text-align: center;
+  color: #232323;
+}
+.cid-scEv2IRtjW {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffe161;
+}
+.cid-scEv2IRtjW img,
+.cid-scEv2IRtjW .item-img {
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-scEv2IRtjW .item:focus,
+.cid-scEv2IRtjW span:focus {
+  outline: none;
+}
+.cid-scEv2IRtjW .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-scEv2IRtjW .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fff0b0;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-scEv2IRtjW .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-scEv2IRtjW .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-scEv2IRtjW .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-scEv2IRtjW .mbr-section-title {
+  color: #232323;
+}
+.cid-scEv2IRtjW .mbr-text,
+.cid-scEv2IRtjW .mbr-section-btn {
+  text-align: center;
+}
+.cid-scEv2IRtjW .item-title {
+  text-align: center;
+}
+.cid-scEv2IRtjW .item-subtitle {
+  text-align: center;
+  color: #232323;
+}
+.cid-scEv35GlZV {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #fff0b0;
+}
+.cid-scEv35GlZV img,
+.cid-scEv35GlZV .item-img {
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-scEv35GlZV .item:focus,
+.cid-scEv35GlZV span:focus {
+  outline: none;
+}
+.cid-scEv35GlZV .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-scEv35GlZV .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #ffe161;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-scEv35GlZV .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-scEv35GlZV .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-scEv35GlZV .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-scEv35GlZV .mbr-section-title {
+  color: #232323;
+}
+.cid-scEv35GlZV .mbr-text,
+.cid-scEv35GlZV .mbr-section-btn {
+  text-align: center;
+}
+.cid-scEv35GlZV .item-title {
+  text-align: center;
+}
+.cid-scEv35GlZV .item-subtitle {
+  text-align: center;
+  color: #232323;
+}
+.cid-scEv3rHmnf {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffe161;
+}
+.cid-scEv3rHmnf .item:focus,
+.cid-scEv3rHmnf span:focus {
+  outline: none;
+}
+.cid-scEv3rHmnf .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-scEv3rHmnf .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fff0b0;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-scEv3rHmnf .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-scEv3rHmnf .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-scEv3rHmnf .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-scEv3rHmnf .mbr-section-title {
+  color: #232323;
+}
+.cid-scEv3rHmnf .mbr-text,
+.cid-scEv3rHmnf .mbr-section-btn {
+  text-align: center;
+}
+.cid-scEv3rHmnf .item-title {
+  text-align: center;
+}
+.cid-scEv3rHmnf .item-subtitle {
+  text-align: center;
+  color: #232323;
+}
+.cid-scEBOd1qdI {
+  padding-top: 5rem;
+  padding-bottom: 0rem;
+  background-color: #ffe885;
+}
+.cid-scEBNwr335 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffe885;
+}
+.cid-scEBNwr335 .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-scEBNwr335 .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-scEBNwr335 .counter-container ol li {
+  list-style: none;
+  padding-left: 1rem;
+  position: relative;
+}
+.cid-scEBNwr335 .counter-container ol li:before {
+  position: absolute;
+  left: -40px;
+  margin-top: 5px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  line-height: 40px;
+  transition: all .2s;
+  color: #000000;
+  background: #e6c63b;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-s9LnWfdHXQ {
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+  background-color: #232323;
+}
+.cid-s9LnWfdHXQ .list {
+  list-style: none;
+  padding-left: 0;
+  color: #bbbbbb;
+}
+@media (max-width: 991px) {
+  .cid-s9LnWfdHXQ .list {
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-s9LnWfdHXQ .list {
+    margin-bottom: 0rem;
+  }
+}
+.cid-s48OLK6784 {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+  min-height: 60px;
+}
+.cid-s48OLK6784 nav.navbar {
+  position: fixed;
+}
+.cid-s48OLK6784 .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: '\e966';
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-s48OLK6784 .dropdown-menu {
+  padding: 0;
+}
+.cid-s48OLK6784 .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-s48OLK6784 .dropdown-item:hover,
+.cid-s48OLK6784 .dropdown-item:focus {
+  background: #6592e6 !important;
+  color: white !important;
+}
+.cid-s48OLK6784 .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: .667em 1em !important;
+}
+.cid-s48OLK6784 .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-s48OLK6784 .nav-link {
+  position: relative;
+}
+.cid-s48OLK6784 .container {
+  display: flex;
+  margin: auto;
+}
+.cid-s48OLK6784 .iconfont-wrapper {
+  color: #000000 !important;
+  font-size: 1.5rem;
+  padding-right: .5rem;
+}
+.cid-s48OLK6784 .navbar-caption {
+  padding-right: 4rem;
+}
+.cid-s48OLK6784 .dropdown-menu,
+.cid-s48OLK6784 .navbar.opened {
+  background: #000000 !important;
+}
+.cid-s48OLK6784 .nav-item:focus,
+.cid-s48OLK6784 .nav-link:focus {
+  outline: none;
+}
+.cid-s48OLK6784 .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-s48OLK6784 .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-s48OLK6784 .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-left: -1.8rem;
+  padding-right: 1rem;
+  font-size: inherit;
+}
+.cid-s48OLK6784 .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-s48OLK6784 .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-s48OLK6784 .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-s48OLK6784 .navbar {
+  min-height: 77px;
+  transition: all .3s;
+  border-bottom: 1px solid transparent;
+  background: #000000;
+}
+.cid-s48OLK6784 .navbar:not(.navbar-short) {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-s48OLK6784 .navbar.opened {
+  transition: all .3s;
+}
+.cid-s48OLK6784 .navbar .dropdown-item {
+  padding: .5rem 1.8rem;
+}
+.cid-s48OLK6784 .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-s48OLK6784 .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-s48OLK6784 .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-s48OLK6784 .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-s48OLK6784 .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
+}
+.cid-s48OLK6784 .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-s48OLK6784 .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-s48OLK6784 .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 55%;
+}
+.cid-s48OLK6784 .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-s48OLK6784 .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: .25rem 1.5rem;
+  text-align: center;
+}
+.cid-s48OLK6784 .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
+@media (max-width: 991px) {
+  .cid-s48OLK6784 .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-s48OLK6784 .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-s48OLK6784 .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-s48OLK6784 .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-s48OLK6784 .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 55%;
+  }
+  .cid-s48OLK6784 .navbar .navbar-logo img {
+    height: 3.8rem !important;
+  }
+  .cid-s48OLK6784 .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-s48OLK6784 .navbar .dropdown-menu .dropdown-item {
+    padding: .25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-s48OLK6784 .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-s48OLK6784 .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-s48OLK6784 .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+  }
+}
+.cid-s48OLK6784 .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-s48OLK6784 .navbar.navbar-short .navbar-logo img {
+  height: 3rem !important;
+}
+.cid-s48OLK6784 .navbar.navbar-short .navbar-brand {
+  padding: 0;
+}
+.cid-s48OLK6784 .navbar-brand {
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 0;
+  transition: all .3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-s48OLK6784 .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-s48OLK6784 .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-s48OLK6784 .dropdown-item.active,
+.cid-s48OLK6784 .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-s48OLK6784 .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-s48OLK6784 .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-s48OLK6784 .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-s48OLK6784 .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #000000;
+}
+.cid-s48OLK6784 .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-s48OLK6784 .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-s48OLK6784 ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-s48OLK6784 .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-s48OLK6784 button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all .2s;
+  position: relative;
+  align-self: center;
+}
+.cid-s48OLK6784 button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: currentColor;
+}
+.cid-s48OLK6784 button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-s48OLK6784 button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-s48OLK6784 button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-s48OLK6784 button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-s48OLK6784 nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-s48OLK6784 nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-s48OLK6784 nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-s48OLK6784 nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-s48OLK6784 .navbar-dropdown {
+  padding: .5rem 1rem;
+  position: fixed;
+}
+.cid-s48OLK6784 a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-s48OLK6784 .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-s48OLK6784 .navbar {
+    height: 77px;
+  }
+  .cid-s48OLK6784 .navbar.opened {
+    height: auto;
+  }
+  .cid-s48OLK6784 .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
