--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8498,10 +8498,13 @@ a {
 .cid-scBIj01Sbt img {
   width: 100%;
 }
-.cid-scBVOnsAES {
-  padding-top: 5rem;
+.cid-scEY7owyxg {
+  padding-top: 3rem;
   padding-bottom: 5rem;
   background-color: #ffe885;
+}
+.cid-scEY7owyxg .mbr-section-title {
+  text-align: center;
 }
 .cid-scBVT6H7CJ {
   padding-top: 1rem;
@@ -8559,6 +8562,45 @@ a {
   .cid-scBYzmWcEO .text-wrapper {
     padding: 2rem;
   }
+}
+.cid-scEYmtcTfG {
+  padding-top: 5rem;
+  padding-bottom: 0rem;
+  background-color: #ffe161;
+}
+.cid-scEYn53LzG {
+  padding-top: 0rem;
+  padding-bottom: 5rem;
+  background-color: #ffe161;
+}
+.cid-scEYn53LzG .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-scEYn53LzG .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-scEYn53LzG .counter-container ol li {
+  list-style: none;
+  padding-left: 1rem;
+  position: relative;
+}
+.cid-scEYn53LzG .counter-container ol li:before {
+  position: absolute;
+  left: -40px;
+  margin-top: 5px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  line-height: 40px;
+  transition: all .2s;
+  color: #000000;
+  background: #ffda00;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
