create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8259,7 +8259,7 @@ a {
   }
 }
 .cid-scvGh9gteb {
-  background-image: url("../../../assets/images/background9.jpg");
+  background-image: url("../../../assets/images/gears-686316-1920-1920x1440.jpg");
 }
 .cid-scvGv8AD45 {
   padding-top: 2rem;
@@ -8578,6 +8578,9 @@ a {
   padding-top: 4rem;
   padding-bottom: 0rem;
   background-color: #fff0b0;
+}
+.cid-scFfGWPNpL .mbr-section-subtitle {
+  text-align: left;
 }
 .cid-scFfRCXAYI {
   padding-top: 6rem;
