create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8264,15 +8264,15 @@ a {
 .cid-scvGv8AD45 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #ffffff;
+  background-color: #e6c63b;
 }
 .cid-scBVwhrayq {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #ffffff;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #e6c63b;
 }
 .cid-scBVwhrayq .line {
-  background-color: #6592e6;
+  background-color: #345b12;
   align: center;
   height: 2px;
   margin: 0 auto;
@@ -8505,17 +8505,6 @@ a {
 }
 .cid-scEY7owyxg .mbr-section-title {
   text-align: center;
-}
-.cid-scFhAWNsBn {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #ffda00;
-}
-.cid-scFhAWNsBn .line {
-  background-color: #fff0b0;
-  align: center;
-  height: 2px;
-  margin: 0 auto;
 }
 .cid-scBVT6H7CJ {
   padding-top: 1rem;
