--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8284,132 +8284,24 @@ a {
 }
 .cid-scvUDfF7mB {
   padding-top: 3rem;
-  padding-bottom: 2rem;
+  padding-bottom: 0rem;
   background-color: #fff0b0;
 }
-.cid-scw27Rkjbr {
+.cid-scLEoBHpwz {
   padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-bottom: 6rem;
   background-color: #fff0b0;
 }
-.cid-scw27Rkjbr .card-box {
-  z-index: 10;
-  position: relative;
-}
-@media (min-width: 1500px) {
-  .cid-scw27Rkjbr .container {
-    max-width: 1400px;
+@media (max-width: 991px) {
+  .cid-scLEoBHpwz .image-wrapper {
+    margin-bottom: 1rem;
   }
 }
-.cid-scw27Rkjbr .card {
-  margin: auto;
+.cid-scLEoBHpwz .row {
+  flex-direction: row-reverse;
 }
-.cid-scw27Rkjbr .mbr-iconfont {
-  display: block;
-  font-size: 5rem;
-  color: #6592e6;
-  margin-bottom: 2rem;
-}
-.cid-scw27Rkjbr .card-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.cid-scw27Rkjbr .row {
-  justify-content: center;
-}
-.cid-scw28MHZY1 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  background-color: #fff0b0;
-}
-.cid-scw28MHZY1 .card-box {
-  z-index: 10;
-  position: relative;
-}
-@media (min-width: 1500px) {
-  .cid-scw28MHZY1 .container {
-    max-width: 1400px;
-  }
-}
-.cid-scw28MHZY1 .card {
-  margin: auto;
-}
-.cid-scw28MHZY1 .mbr-iconfont {
-  display: block;
-  font-size: 5rem;
-  color: #6592e6;
-  margin-bottom: 2rem;
-}
-.cid-scw28MHZY1 .card-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.cid-scw28MHZY1 .row {
-  justify-content: center;
-}
-.cid-scw29i4dGy {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  background-color: #fff0b0;
-}
-.cid-scw29i4dGy .card-box {
-  z-index: 10;
-  position: relative;
-}
-@media (min-width: 1500px) {
-  .cid-scw29i4dGy .container {
-    max-width: 1400px;
-  }
-}
-.cid-scw29i4dGy .card {
-  margin: auto;
-}
-.cid-scw29i4dGy .mbr-iconfont {
-  display: block;
-  font-size: 5rem;
-  color: #6592e6;
-  margin-bottom: 2rem;
-}
-.cid-scw29i4dGy .card-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.cid-scw29i4dGy .row {
-  justify-content: center;
-}
-.cid-scw2axNXfi {
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-  background-color: #fff0b0;
-}
-.cid-scw2axNXfi .card-box {
-  z-index: 10;
-  position: relative;
-}
-@media (min-width: 1500px) {
-  .cid-scw2axNXfi .container {
-    max-width: 1400px;
-  }
-}
-.cid-scw2axNXfi .card {
-  margin: auto;
-}
-.cid-scw2axNXfi .mbr-iconfont {
-  display: block;
-  font-size: 5rem;
-  color: #6592e6;
-  margin-bottom: 2rem;
-}
-.cid-scw2axNXfi .card-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.cid-scw2axNXfi .row {
-  justify-content: center;
+.cid-scLEoBHpwz img {
+  width: 100%;
 }
 .cid-scvQMG3baT {
   padding-top: 5rem;
