--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10575,6 +10575,263 @@ a {
   text-align: center;
   color: #000000;
 }
+.cid-sdfAUdAioO {
+  padding-top: 5rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
+}
+.cid-sdfFH3yWAk {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #e0d12d;
+}
+.cid-sdfFH3yWAk .item {
+  padding-bottom: 2rem;
+}
+.cid-sdfFH3yWAk .item-wrapper {
+  position: relative;
+}
+.cid-sdfFH3yWAk .item-wrapper .icon-wrapper {
+  pointer-events: none;
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  font-size: 40px;
+  left: 50%;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid #ffffff;
+  border-radius: 50%;
+  opacity: 0;
+  color: #ffffff;
+  transform: translateX(-50%) translateY(-50%);
+  background-color: #1b1b1b;
+  transition: 0.2s;
+}
+.cid-sdfFH3yWAk .item-wrapper:hover .icon-wrapper {
+  opacity: 0.7;
+}
+.cid-sdfFH3yWAk .carousel-control,
+.cid-sdfFH3yWAk .close {
+  background: #1b1b1b;
+}
+.cid-sdfFH3yWAk .carousel-control-prev {
+  margin-left: 2.5rem;
+}
+.cid-sdfFH3yWAk .carousel-control-prev span {
+  margin-right: 5px;
+}
+.cid-sdfFH3yWAk .carousel-control-next {
+  margin-right: 2.5rem;
+}
+.cid-sdfFH3yWAk .carousel-control-next span {
+  margin-left: 5px;
+}
+.cid-sdfFH3yWAk .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 22px;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  font-family: 'Moririse2';
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-sdfFH3yWAk .close::before {
+  content: '\e91a';
+}
+.cid-sdfFH3yWAk .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-sdfFH3yWAk .carousel-control {
+  display: flex;
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-sdfFH3yWAk .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sdfFH3yWAk .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-sdfFH3yWAk .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-sdfFH3yWAk .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3px;
+}
+.cid-sdfFH3yWAk .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-sdfFH3yWAk .carousel-indicators li.active,
+.cid-sdfFH3yWAk .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-sdfFH3yWAk .carousel-indicators li::after,
+.cid-sdfFH3yWAk .carousel-indicators li::before {
+  content: none;
+}
+.cid-sdfFH3yWAk .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-sdfFH3yWAk .carousel-indicators {
+    display: none !important;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sdfFH3yWAk .carousel-indicators {
+    margin-bottom: 3.625rem !important;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sdfFH3yWAk .carousel-indicators {
+    display: none;
+  }
+}
+.cid-sdfFH3yWAk .carousel-inner {
+  display: flex;
+  align-items: center;
+}
+.cid-sdfFH3yWAk .carousel-inner > .active {
+  display: block;
+}
+.cid-sdfFH3yWAk .carousel-control.left {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sdfFH3yWAk .carousel-control.right {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-sdfFH3yWAk .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 768px) {
+  .cid-sdfFH3yWAk .carousel-control,
+  .cid-sdfFH3yWAk .carousel-indicators,
+  .cid-sdfFH3yWAk .modal .close {
+    position: fixed;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sdfFH3yWAk .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 20px;
+  }
+  .cid-sdfFH3yWAk .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-sdfFH3yWAk .carousel-indicators .active,
+.cid-sdfFH3yWAk .carousel-indicators li {
+  width: 7px;
+  height: 7px;
+  margin: 3px;
+  background: #000000;
+  opacity: 0.5;
+  border: 4px solid #000000;
+}
+.cid-sdfFH3yWAk .carousel-indicators .active {
+  background: #fff;
+}
+.cid-sdfFH3yWAk .carousel-indicators li {
+  max-width: 15px;
+  max-height: 15px;
+  border-radius: 50%;
+}
+.cid-sdfFH3yWAk .modal {
+  padding-left: 0 !important;
+  position: fixed;
+  overflow: hidden;
+  padding-right: 0 !important;
+}
+.cid-sdfFH3yWAk .modal-dialog {
+  margin: 0 auto;
+  max-width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-sdfFH3yWAk .modal-content {
+  border-radius: 0;
+  border: none;
+  background: transparent;
+}
+.cid-sdfFH3yWAk .modal-body {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.cid-sdfFH3yWAk .modal-body img {
+  width: 100%;
+  object-fit: contain;
+  max-height: calc(100vh - 1.75rem);
+}
+.cid-sdfFH3yWAk .carousel {
+  width: 100%;
+}
+.cid-sdfFH3yWAk .modal-backdrop.in {
+  opacity: 0.8;
+}
+.cid-sdfFH3yWAk .modal.fade .modal-dialog {
+  transition: margin-top 0.3s ease-out;
+}
+.cid-sdfFH3yWAk .modal.fade .modal-dialog,
+.cid-sdfFH3yWAk .modal.in .modal-dialog {
+  transform: none;
+}
+.cid-sdfFH3yWAk .mbr-gallery .item-wrapper {
+  cursor: pointer;
+}
+.cid-sdfFH3yWAk H6 {
+  text-align: center;
+  color: #fafafa;
+}
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
   padding-bottom: 2rem;
