--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11134,6 +11134,27 @@ a {
   text-align: center;
   color: #fafafa;
 }
+.cid-sdjUACqmWz {
+  padding-top: 5rem;
+  padding-bottom: 1rem;
+  background-color: #e6c63b;
+}
+.cid-sdjUCvATNH {
+  padding-top: 1rem;
+  padding-bottom: 5rem;
+  background-color: #e6c63b;
+}
+@media (max-width: 991px) {
+  .cid-sdjUCvATNH .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sdjUCvATNH .row {
+  flex-direction: row-reverse;
+}
+.cid-sdjUCvATNH img {
+  width: 100%;
+}
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
   padding-bottom: 2rem;
