--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10797,6 +10797,22 @@ a {
   text-align: center;
   color: #000000;
 }
+.cid-sdOS0RKF1b {
+  padding-top: 2rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-sdOS0RKF1b .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sdOS0RKF1b .row {
+  flex-direction: row-reverse;
+}
+.cid-sdOS0RKF1b img {
+  width: 100%;
+}
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
   padding-bottom: 2rem;
