create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10995,7 +10995,7 @@ a {
   }
 }
 .cid-sffr06hUzV {
-  background-image: url("../../../assets/images/background11.jpg");
+  background-image: url("../../../assets/images/technology-1095751-1922-517x144.jpeg");
 }
 .cid-sffsVhDhCK {
   padding-top: 5rem;
