--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11060,26 +11060,43 @@ a {
 .cid-sffttKGVmA img {
   width: 100%;
 }
-.cid-sffvVX7DEh {
-  padding-top: 3rem;
-  padding-bottom: 0rem;
-  background-color: #ffe885;
-}
-.cid-sffr5ptS5v {
+.cid-sfiOs0b62S {
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-color: #ffe885;
 }
+.cid-sfiOs0b62S .content-wrapper {
+  background: #ffda00;
+}
 @media (max-width: 991px) {
-  .cid-sffr5ptS5v .image-wrapper {
-    margin-bottom: 1rem;
+  .cid-sfiOs0b62S .content-wrapper .row {
+    flex-direction: column-reverse;
+  }
+  .cid-sfiOs0b62S .content-wrapper .image-wrapper {
+    margin-bottom: 2rem;
   }
 }
-.cid-sffr5ptS5v .row {
-  flex-direction: row-reverse;
+@media (max-width: 767px) {
+  .cid-sfiOs0b62S .content-wrapper {
+    padding: 1rem;
+  }
 }
-.cid-sffr5ptS5v img {
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-sfiOs0b62S .content-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sfiOs0b62S .content-wrapper {
+    padding: 5rem 3rem;
+  }
+  .cid-sfiOs0b62S .content-wrapper .text-wrapper {
+    padding-right: 2rem;
+  }
+}
+.cid-sfiOs0b62S .image-wrapper img {
   width: 100%;
+  object-fit: cover;
 }
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
