create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11587,6 +11587,19 @@ a {
     padding: 2rem;
   }
 }
+.cid-sg3UqAzrQG {
+  padding-top: 2rem;
+  padding-bottom: 6rem;
+  background-color: #ffe161;
+}
+.cid-sg3UqAzrQG .video-wrapper iframe {
+  width: 100%;
+}
+.cid-sg3UqAzrQG .mbr-section-title,
+.cid-sg3UqAzrQG .mbr-section-subtitle,
+.cid-sg3UqAzrQG .mbr-text {
+  text-align: center;
+}
 .cid-sfXgltuXFD {
   padding-top: 6rem;
   padding-bottom: 0rem;
