--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11621,20 +11621,36 @@ a {
     padding: 2rem;
   }
 }
-.cid-sfXhQ3s5kD {
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-  background-color: #fff0b0;
+.cid-sg3X4i7L50 {
+  padding-top: 3rem;
+  padding-bottom: 0rem;
+  background-color: #ffe885;
 }
 @media (max-width: 991px) {
-  .cid-sfXhQ3s5kD .image-wrapper {
+  .cid-sg3X4i7L50 .image-wrapper {
     margin-bottom: 1rem;
   }
 }
-.cid-sfXhQ3s5kD .row {
+.cid-sg3X4i7L50 .row {
   flex-direction: row-reverse;
 }
-.cid-sfXhQ3s5kD img {
+.cid-sg3X4i7L50 img {
+  width: 100%;
+}
+.cid-sg3X4BFUaB {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #ffe885;
+}
+@media (max-width: 991px) {
+  .cid-sg3X4BFUaB .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sg3X4BFUaB .row {
+  flex-direction: row-reverse;
+}
+.cid-sg3X4BFUaB img {
   width: 100%;
 }
 .cid-sfXmGktZ3l {
